@startuml
interface Agent {
    + boolean isWhite()
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + void pause()
    + Agent reset()
    + void simulate()
}

class AgentMCTS {
    - GameLogic gameLogic
    - GameState gameState
    - boolean isWhite
    + AgentMCTS(boolean isWhite)
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + Agent reset()
}

class AlphaBetaAgent {
    - GameLogic gameLogic
    - GameState gameState
    - boolean isWhite
    + AlphaBetaAgent(boolean isWhite, int maxDepth)
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + Agent reset()
}

class MinimaxAgent {
    - GameLogic gameLogic
    - GameState gameState
    - boolean isWhite
    + MinimaxAgent(boolean isWhite, int maxDepth)
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + Agent reset()
}

Agent <|.. AgentMCTS
Agent <|.. AlphaBetaAgent
Agent <|.. MinimaxAgent
@enduml
